# rikkyo-course-finder

./: CLAUDE.md  README.md  app.py  cli.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  rguide.py  scraper.py  test_cli.py
rguide_data/: curriculum_map.json
templates/: index.html
